meal adder implemented

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <app-main-menu [selectedMenu]="selectedPage" (menuSelection)=showPage($event)></app-main-menu>
 
-<app-meal-adder *ngIf="selectedPage == 'food'"></app-meal-adder>
-<app-food-editor *ngIf="selectedPage == 'settings'">USTAWIENIA</app-food-editor>
+<app-main *ngIf="selectedPage == 'food'"></app-main>
+<app-settings *ngIf="selectedPage == 'settings'"></app-settings>
 <h1 *ngIf="selectedPage == 'charts'">WYKRESY</h1>
