--- a/src/app/kcal/food-editor/food-item-adder/food-item-adder.component.html
+++ b/src/app/kcal/food-editor/food-item-adder/food-item-adder.component.html
@@ -1,16 +1,23 @@
-<p>Dodaj nowy posiłek:</p>
-
 <form [formGroup]="foodForm" (ngSubmit)="addFood()">
     <div class="row">
-        <div class="col">
-            <input type="text" formControlName="name" placeholder="nazwa">
+        <div class="col-sm">
+            <input class="form-control" type="text" formControlName="name" placeholder="nazwa">
         </div>
-        <div class="col">
-            <input type="number" formControlName="kcal" placeholder="kalorie">
+        <div class="col-sm">
+            <input class="form-control" type="number" formControlName="kcal" placeholder="kalorie">
         </div>
-        <div class="col">
-            <button type="submit">{{buttonAdd}}</button>
+        <div class="col-sm">
+            <button class="btn btn-success" [disabled]="!foodForm.valid"  type="submit">{{buttonAdd}}</button>
+        </div>
+    </div>
+    <div *ngIf="!foodForm.valid && foodForm.touched" class="row">
+        <div class="col alert alert-danger">
+            <div>Niepoprawne dane:</div>
+            <ul>
+                <li *ngIf="foodForm.get('name').errors?.required">nazwa nie może być pusta</li>
+                <li *ngIf="foodForm.get('kcal').errors?.required">kalorie muszą być liczbą</li>
+                <li *ngIf="foodForm.get('kcal').errors?.min">kalorie nie mogą być liczbą ujemną</li>
+            </ul>
         </div>
     </div>
 </form>
-<hr>
