added form for setting kcal limit

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,4 +2,4 @@
 
 <app-main *ngIf="selectedPage == 'food'"></app-main>
 <app-settings *ngIf="selectedPage == 'settings'"></app-settings>
-<h1 *ngIf="selectedPage == 'charts'">WYKRESY</h1>
+<!-- <h1 *ngIf="selectedPage == 'charts'">WYKRESY</h1> -->
