--- a/src/app/navi/main-menu/main-menu.component.html
+++ b/src/app/navi/main-menu/main-menu.component.html
@@ -6,8 +6,8 @@
         <li class="nav-item" (click)="selectMenu('settings')">
             <a [className]="selectedMenu == 'settings' ? 'nav-link active' : 'nav-link'">Ustawienia</a>
         </li>
-        <li class="nav-item" (click)="selectMenu('charts')">
+        <!-- <li class="nav-item" (click)="selectMenu('charts')">
             <a [className]="selectedMenu == 'charts' ? 'nav-link active' : 'nav-link'">Wykresy</a>
-        </li>
+        </li> -->
     </ul>
 </nav>
