--- a/src/app/subpages/main/main.component.html
+++ b/src/app/subpages/main/main.component.html
@@ -1,2 +1,9 @@
-<p>Posiłki</p>
+<p>Strona główna</p>
+
+<div *ngIf="firstRun" class="alert alert-primary mb-3 text-center">
+    Wygląda na to, że to twoje pierwsze uruchomienie aplikacji.<br>Domyślnie przyjęto limit 2000 kcal. Możesz zmienić go w ustawieniach.
+</div>
+<div *ngIf="!firstRun && !this.kcalService.isActiveKcalLimitSet()" class="alert alert-primary mb-3 text-center">
+    Przejdź do ustawień aby ustawić limit kalorii. Przyjęto domyślnie 2000 kcal.
+</div>
 <app-meal-adder></app-meal-adder>
