--- a/src/app/kcal/chart/chart.component.html
+++ b/src/app/kcal/chart/chart.component.html
@@ -1,5 +1,10 @@
-<p>chart works!</p>
+<div class="card bg-light">
+    <div class="card-header">
+        Poprzednie dni
+    </div>
+    <div class="card-body">
+        <canvas id="myChart" width="400" height="400"></canvas>
+        <!-- <p>Whut?</p> -->
+    </div>
 
-<div style="height: 200px; width: 200px;">
-    <canvas id="myChart" width="400" height="400"></canvas>
 </div>
