--- a/src/app/kcal/meal-adder/meal-adder.component.html
+++ b/src/app/kcal/meal-adder/meal-adder.component.html
@@ -15,6 +15,7 @@
         </div>
     </div>
 </form>
+<div class="alert alert-info">Brak produktu na liście? Dodaj go w ustawieniach.</div>
 <button type="button" (click)="resetDay()">resetuj dzisiejszy dzień</button>
 
 <div class="row">
