--- a/src/app/kcal/meal-history/meal-history.component.html
+++ b/src/app/kcal/meal-history/meal-history.component.html
@@ -1,8 +1,8 @@
-<p>meal-history works!</p>
-
-
 <div class="card bg-light">
     <div class="card-header text-center">
+        Zjedzone posiłki
+    </div>
+    <div class="card-body text-center">
         <div class="row">
             <div class="col-sm">
                 <button class="btn btn-outline-primary" *ngIf="shownDateString != this.kcalService.getFirstRunDate()" type="button" (click)="changeDay(-1)">Poprzedni dzień</button>
@@ -15,7 +15,7 @@
             </div>
         </div>
     </div>
-    <ul class="list-group">
+    <ul class="list-group list-group-flush">
         <li class="list-group-item" *ngFor="let item of this.kcalService.shownDayRecord.$foodItemsEaten">{{item.name}} - {{item.kcal}} kcal</li>
         <li class="list-group-item" *ngIf="this.kcalService.shownDayRecord.$foodItemsEaten.length == 0">Brak zapisanych posiłków</li>
     </ul>
