--- a/src/app/kcal/chart/chart.component.html
+++ b/src/app/kcal/chart/chart.component.html
@@ -1,10 +1,6 @@
-<div class="card bg-light">
-    <div class="card-header">
-        Poprzednie dni
-    </div>
+<div class="card bg-light mb-3">
+    <h4 class="card-header">Poprzednie dni</h4>
     <div class="card-body">
         <canvas id="myChart" width="400" height="400"></canvas>
-        <!-- <p>Whut?</p> -->
     </div>
-
 </div>
