--- a/src/app/kcal/limit-setter/limit-setter.component.html
+++ b/src/app/kcal/limit-setter/limit-setter.component.html
@@ -1,12 +1,17 @@
-<h2>Limit kalorii</h2>
-<form [formGroup]="limitForm" (ngSubmit)=setLimit()>
-    <div class="input-group">
-        <div class="input-group-prepend">
-            <label class="input-group-text" for="kcalLimit">Limit kalorii:</label>
-        </div>
-        <input id="kcalLimit" class="form-control" type="number" formControlName="kcalLimit" required>
-        <div class="input-group-append">
-            <button class="btn btn-primary" type="submit" [disabled]="!limitForm.valid">{{buttonLimit}}</button>
-        </div>
+<div class="card bg-light mb-3">
+    <h3 class="card-header">Limit kalorii</h3>
+    <div class="card-body">
+        <p>Poniżej możesz dokonać zmiany limitu kalorii. Limit będzie obowiązywał również dla wszystkich kolejnych dni. Nie wpłynie na poprzednie.</p>
+        <form [formGroup]="limitForm" (ngSubmit)=setLimit()>
+            <div class="input-group">
+                <div class="input-group-prepend">
+                    <label class="input-group-text" for="kcalLimit">Limit wynosi:</label>
+                </div>
+                <input id="kcalLimit" class="form-control" type="number" formControlName="kcalLimit" required>
+                <div class="input-group-append">
+                    <button class="btn btn-primary" type="submit" [disabled]="!limitForm.valid">{{buttonLimit}}</button>
+                </div>
+            </div>
+        </form>
     </div>
-</form>
+</div>
