--- a/src/app/kcal/meal-history/meal-history.component.html
+++ b/src/app/kcal/meal-history/meal-history.component.html
@@ -1,17 +1,15 @@
-<div class="card bg-light">
-    <div class="card-header text-center">
-        Zjedzone posiłki
-    </div>
-    <div class="card-body text-center">
-        <div class="row">
-            <div class="col-sm">
-                <button class="btn btn-outline-primary" *ngIf="shownDateString != this.kcalService.getFirstRunDate()" type="button" (click)="changeDay(-1)">Poprzedni dzień</button>
+<div class="card bg-light mb-3">
+    <h4 class="card-header">Zjedzone posiłki</h4>
+    <div class="card-body">
+        <div class="input-group">
+            <div class="input-group-prepend">
+                <button [disabled]="shownDateString == this.kcalService.getFirstRunDate()" class="btn btn-primary" type="button" (click)="changeDay(-1)">Poprzedni</button>
             </div>
-            <div class="col-sm">
-                <input #dateInput class="form-control" type="date" [value]="shownDateString" [min]="this.kcalService.getFirstRunDate()" [max]="this.kcalService.dateToString()" id="data" (change)="showDate(dateInput)">
-            </div>
-            <div class="col-sm">
-                <button class="btn btn-outline-primary" *ngIf="shownDateString != currentDateString" type="button" (click)="changeDay(1)">Następny dzień</button>
+
+            <input #dateInput class="form-control" type="date" [value]="shownDateString" [min]="this.kcalService.getFirstRunDate()" [max]="this.kcalService.dateToString()" id="data" (change)="showDate(dateInput)">
+            
+            <div class="input-group-append">
+                <button [disabled]="shownDateString == currentDateString" class="btn btn-primary" type="button" (click)="changeDay(1)">Następny</button>
             </div>
         </div>
     </div>
